<resources>
    <!-- GLOBAL -->
    <string name="app_name">SwiftFix</string>
    <string name="nav_home">Home</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_new">Add</string>

    <!-- Main Activity -->
    <string name="text_subhead_main">On the Fast Lane to Vehicle Care Excellence</string>
    <string name="text_copyright_main">Powered By ROmega</string>
    <string name="text_fname_main">First Name</string>
    <string name="text_lname_main">Last Name</string>
    <string name="text_email_main">Email</string>
    <string name="text_password_main">Password</string>
    <string name="text_login_main">Login</string>
    <string name="text_register_main">Register</string>
    <string name="text_login_redirector_main">Already have an account? Login now!</string>
    <string name="text_register_redirector_main">Don\'t have an account? Register now!</string>

    <!-- Home Activity -->
    <string name="welcome_message">Hello, Welcome Username!</string>
    <string name="app_description">SwiftFix: Your One-Stop Solution for Vehicle Maintenance and Repair Services Provider.</string>
    <string name="image_slider">Image Slider</string>
    <string name="report_problem">Report Problem</string>
    <string name="provide_feedback">Provide Feedback</string>
    <string name="track_repairman">Track Repairman</string>
    <string name="view_status">View Status</string>
    <string name="scrolling_view">scrolling_view</string>
    <string name="logo2">We are</string>


    <!-- Report Problem Activity -->
    <string name="description_hint">Describe the problem...</string>
    <string name="attach_image">Add An Image/Edit Image</string>
    <string name="submit">Submit</string>
    <string name="problem_policy">Note: User must give all the necessary credential to add a Report and be sure to select the right location(Location cannot be changed after submitting the report)</string>

    <!-- View Status Activity -->
    <string name="status_details_placeholder">Status Details: Pending</string>
    <string name="assign_status">Assign Status: Pending</string>
    <string name="arrive_status">Arrive Status: Pending</string>
    <string name="complete_status">Complete Status: Pending</string>
    <string name="job_number">Job Number: J12345</string>
    <string name="job_details">Job Details: Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="view_status_details">View Detailed Status</string>
    <string name="close_popup">Close</string>
    <string name="add_another_job_note">Note: You can add another job after the current one is completed.</string>
    <string name="add_location">Add Location</string>


    <!-- Feedback Activity -->
    <string name="feedback">Feedback</string>
    <string name="view_job_details">View Job Details</string>
    <string name="job_details_placeholder">Job Details Placeholder</string>
    <string name="feedback_description_hint">Add your feedback here...</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="job_number_details">Job Number: %s</string>
    <string name="repairman_details">Repairman: %s</string>
    <string name="job_description_details">Job Description: %s</string>

    <!--     Google Web Id-->
    <string name="web_client_id">254810415843-74nfnub99m5j8nv65a5qtivccjh14n2m.apps.googleusercontent.com</string>

    <string-array name="image_sources">
        <item>Camera</item>
        <item>Gallery</item>
    </string-array>
</resources>