<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_background"
    tools:context=".ViewStatusActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView3"
        android:name="com.romega_swiftfix.AppBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout="@layout/fragment_app_bar" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView2"
        android:name="com.romega_swiftfix.BottomNavigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout="@layout/fragment_bottom_navigation" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewStatus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@+id/fragmentContainerView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentContainerView3">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <!-- Job Number -->
            <TextView
                android:id="@+id/textViewJobNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/job_number"
                android:textColor="@color/primary_foreground"
                android:textSize="20sp"
                android:textStyle="bold" />

            <!-- Job Details -->
            <TextView
                android:id="@+id/textViewJobDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewJobNumber"
                android:layout_marginTop="8dp"
                android:text="@string/job_details"
                android:textColor="@color/primary_foreground"
                android:textSize="18sp" />


            <!-- Detailed Status Popup Trigger -->

            <!-- Detailed Status Popup -->
            <TextView
                android:id="@+id/textViewStatusPopupTrigger"
                android:layout_width="343dp"
                android:layout_height="73dp"
                android:layout_below="@id/textViewJobDetails"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:onClick="showStatusPopup"
                android:text="@string/view_status_details"
                android:textColor="@color/button_background"
                android:textSize="18sp" />

            <RelativeLayout
                android:id="@+id/relativeLayoutStatusPopup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewStatusPopupTrigger"
                android:layout_marginTop="16dp"
                android:visibility="gone">


                <TextView
                    android:id="@+id/textViewStatusJob"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/add_another_job_note"
                    android:textColor="@color/cannot_be_completed_color"
                    android:textSize="18sp" />


                <!-- Status Details -->
                <TextView
                    android:id="@+id/textViewStatusDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textViewStatusJob"
                    android:layout_marginTop="16dp"
                    android:text="@string/status_details_placeholder"
                    android:textColor="@color/primary_foreground"
                    android:textSize="18sp" />

                <!-- Assign Status -->
                <TextView
                    android:id="@+id/textViewAssignStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textViewStatusDetails"
                    android:layout_marginTop="16dp"
                    android:text="@string/assign_status"
                    android:textColor="@color/primary_foreground"
                    android:textSize="18sp" />

                <!-- Arrive Status -->
                <TextView
                    android:id="@+id/textViewArriveStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textViewAssignStatus"
                    android:layout_marginTop="16dp"
                    android:text="@string/arrive_status"
                    android:textColor="@color/primary_foreground"
                    android:textSize="18sp" />

                <!-- Complete Status -->
                <TextView
                    android:id="@+id/textViewCompleteStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textViewArriveStatus"
                    android:layout_marginTop="16dp"
                    android:text="@string/complete_status"
                    android:textColor="@color/primary_foreground"
                    android:textSize="18sp" />


                <!-- Close Popup Button -->
                <TextView
                    android:id="@+id/textViewClosePopup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_below="@id/textViewCompleteStatus"
                    android:layout_marginTop="26dp"
                    android:layout_centerHorizontal="true"
                    android:background="@color/button_background"
                    android:text="@string/close_popup"
                    android:textColor="@color/white"
                    android:padding="8dp"
                    android:clickable="true"
                    android:onClick="closeStatusPopup"/>
            </RelativeLayout>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
