<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_background"
    tools:context=".HomeActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView3"
        android:name="com.romega_swiftfix.AppBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout="@layout/fragment_app_bar" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView2"
        android:name="com.romega_swiftfix.BottomNavigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout="@layout/fragment_bottom_navigation" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/fragmentContainerView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentContainerView3">

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/scrolling_view"
            android:animateLayoutChanges="true"
            android:animation="@anim/fade_in"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/viewPager"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:contentDescription="@string/image_slider" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />


                <!-- Welcome Message -->
                <TextView
                    android:id="@+id/textWelcomeMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"

                    android:textColor="@color/primary_foreground"
                    android:layout_gravity="center_horizontal"

                    android:fontFamily="@font/monitorica"/>


                <Space
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />
                <!-- Quick Action Buttons -->

                <Button
                    android:id="@+id/buttonReportProblem"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/home_button_background"
                    android:drawableTop="@drawable/ic_report_problem"
                    android:fontFamily="@font/monitorica"
                    android:text="@string/report_problem"
                    android:textSize="18sp"
                    app:iconTint="#1575C1"
                    android:textStyle="bold"/>

                <Button
                    android:id="@+id/buttonViewStatus"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/home_button_background"
                    android:drawableTop="@drawable/ic_view_status"
                    android:text="@string/view_status"
                    android:textSize="18sp"
                    android:fontFamily="@font/monitorica"
                    android:textStyle="bold"/>

                <Button
                    android:id="@+id/buttonTrackRepairman"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/home_button_background"
                    android:drawableTop="@drawable/ic_track_repairman"
                    android:text="@string/track_repairman"
                    android:textSize="18sp"
                    android:fontFamily="@font/monitorica"
                    android:textStyle="bold"/>

                <Button
                    android:id="@+id/buttonFeedback"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/home_button_background"
                    android:drawableTop="@drawable/ic_provide_feedback"
                    android:text="@string/provide_feedback"
                    android:textSize="18sp"
                    android:fontFamily="@font/monitorica"
                    android:textStyle="bold"/>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />
                <!-- Brief App Description -->
                <TextView
                    android:id="@+id/textAppDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:text="@string/app_description"
                    android:textColor="@color/primary_theme"
                    android:fontFamily="@font/monitorica"
                    android:layout_gravity="center_horizontal"/>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="15dp" />
            </LinearLayout>



        </ScrollView>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>