<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_background"
    tools:context=".Register">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/monitorica"
                android:text="@string/text_fname_main"
                android:textColor="@color/primary_foreground"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/monitorica"
                android:hint="Enter your first name"
                android:inputType="text|textAutoComplete"
                android:paddingTop="13dp"
                android:paddingBottom="13dp"
                android:textColor="@color/primary_foreground"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/monitorica"
                android:text="@string/text_lname_main"
                android:textColor="@color/primary_foreground"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/monitorica"
                android:hint="Enter your last name"
                android:inputType="text|textAutoComplete"
                android:paddingTop="13dp"
                android:paddingBottom="13dp"
                android:textColor="@color/primary_foreground"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/monitorica"
                android:text="@string/text_email_main"
                android:textColor="@color/primary_foreground"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextPhone2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/monitorica"
                android:hint="Enter your email"
                android:inputType="textEmailAddress"
                android:paddingTop="13dp"
                android:paddingBottom="13dp"
                android:textColor="@color/primary_foreground"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/monitorica"
                android:text="@string/text_password_main"
                android:textColor="@color/primary_foreground"
                android:textSize="18sp" />



            <EditText
                android:id="@+id/editTextTextPassword2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/monitorica"
                android:hint="Enter your password"
                android:inputType="textPassword"
                android:paddingTop="13dp"
                android:paddingBottom="13dp"
                android:textColor="@color/primary_foreground"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primary_theme"
                android:fontFamily="@font/monitorica"
                android:text="@string/text_register_main"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:cornerRadius="5dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primary_background"
                android:fontFamily="@font/monitorica"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:text="@string/text_login_redirector_main"
                android:textAlignment="textStart"
                android:textColor="@color/cannot_be_completed_color"
                android:textSize="18sp"
                app:cornerRadius="0dp"
                android:textStyle="bold"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>