<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BottomNavigation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#4C4C4C"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/primary_theme"
            android:fontFamily="@font/monitorica"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/nav_new"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:cornerRadius="0dp"
            app:icon="@drawable/add"
            app:iconPadding="0dp"
            app:iconTint="@color/white"
            app:rippleColor="#434343"
            app:strokeColor="#FFFFFF" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:visibility="invisible" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/primary_theme"
            android:fontFamily="@font/monitorica"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/nav_home"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:cornerRadius="0dp"
            app:icon="@drawable/ic_home"
            app:iconPadding="0dp"
            app:iconTint="@color/white"
            app:rippleColor="#434343"
            app:strokeColor="#FFFFFF" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:visibility="invisible" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/primary_theme"
            android:fontFamily="@font/monitorica"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/nav_profile"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:cornerRadius="0dp"
            app:icon="@drawable/account_circle"
            app:iconPadding="0dp"
            app:iconTint="@color/white"
            app:rippleColor="#434343"
            app:strokeColor="#FFFFFF" />

    </LinearLayout>
</FrameLayout>